force-app/main/default/objects/Case/fields/Zendesk_Ticket_Id__c.field-meta.xml
<CustomField>
    <fullName>Zendesk_Ticket_Id__c</fullName>
    <label>Zendesk Ticket Id</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>