force-app/main/default/objects/Case/fields/ZendeskErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ZendeskErrorMessage__c</fullName>
    <label>Zendesk Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>